Add: Posicionamiento de habitates en primera fase.